--- a/notebook/01.loadmodel.01.ipynb
+++ b/notebook/01.loadmodel.01.ipynb
@@ -89,38 +89,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac39ad7d-2702-41b4-8fae-f9a4e9541be5",
+   "cell_type": "markdown",
+   "id": "be19f877-d68d-49d8-be48-e3db86824c4c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "from transformers import LlamaForCausalLM, LlamaTokenizer\n",
-    "\n",
-    "MODEL_PATH = \"/opt/Data/ModelWeight/meta/llama1.hf/llama1-7b-hf\"\n",
-    "\n",
-    "tokenizer = LlamaTokenizer.from_pretrained(MODEL_PATH, legacy=True, use_fast=False)\n",
-    "model = LlamaForCausalLM.from_pretrained(MODEL_PATH, torch_dtype=torch.float16, local_files_only=True).to('cuda')"
+    "### 2.1 模型加载"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "42fa380c-0fc7-4c37-a5cb-30ed5d264741",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using the legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. This means that tokens that come after special tokens will not be properly handled. We recommend you to read the related pull request available at https://github.com/huggingface/transformers/pull/24565\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c88807865b443299b8510de1ea39927",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of LlamaForCausalLM were not initialized from the model checkpoint at /opt/Data/ModelWeight/meta/llama1.hf/llama1-7b-hf and are newly initialized: ['model.layers.25.self_attn.rotary_emb.inv_freq', 'model.layers.18.self_attn.rotary_emb.inv_freq', 'model.layers.17.self_attn.rotary_emb.inv_freq', 'model.layers.3.self_attn.rotary_emb.inv_freq', 'model.layers.29.self_attn.rotary_emb.inv_freq', 'model.layers.24.self_attn.rotary_emb.inv_freq', 'model.layers.1.self_attn.rotary_emb.inv_freq', 'model.layers.30.self_attn.rotary_emb.inv_freq', 'model.layers.27.self_attn.rotary_emb.inv_freq', 'model.layers.9.self_attn.rotary_emb.inv_freq', 'model.layers.28.self_attn.rotary_emb.inv_freq', 'model.layers.31.self_attn.rotary_emb.inv_freq', 'model.layers.26.self_attn.rotary_emb.inv_freq', 'model.layers.20.self_attn.rotary_emb.inv_freq', 'model.layers.13.self_attn.rotary_emb.inv_freq', 'model.layers.0.self_attn.rotary_emb.inv_freq', 'model.layers.19.self_attn.rotary_emb.inv_freq', 'model.layers.12.self_attn.rotary_emb.inv_freq', 'model.layers.23.self_attn.rotary_emb.inv_freq', 'model.layers.5.self_attn.rotary_emb.inv_freq', 'model.layers.14.self_attn.rotary_emb.inv_freq', 'model.layers.6.self_attn.rotary_emb.inv_freq', 'model.layers.16.self_attn.rotary_emb.inv_freq', 'model.layers.21.self_attn.rotary_emb.inv_freq', 'model.layers.15.self_attn.rotary_emb.inv_freq', 'model.layers.4.self_attn.rotary_emb.inv_freq', 'model.layers.8.self_attn.rotary_emb.inv_freq', 'model.layers.7.self_attn.rotary_emb.inv_freq', 'model.layers.22.self_attn.rotary_emb.inv_freq', 'model.layers.2.self_attn.rotary_emb.inv_freq', 'model.layers.10.self_attn.rotary_emb.inv_freq', 'model.layers.11.self_attn.rotary_emb.inv_freq']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
     "from transformers import LlamaForCausalLM, LlamaTokenizer\n",
     "\n",
     "MODEL_PATH = \"/opt/Data/ModelWeight/meta/llama1.hf/llama1-7b-hf\"\n",
-    "\n",
     "tokenizer = LlamaTokenizer.from_pretrained(MODEL_PATH, legacy=True, use_fast=False)\n",
     "model = LlamaForCausalLM.from_pretrained(MODEL_PATH, torch_dtype=torch.float16, local_files_only=True).to('cuda')\n",
-    "\n",
     "tokenizer.pad_token_id = tokenizer.eos_token_id"
    ]
   },
@@ -129,34 +148,46 @@
    "id": "6190fa1b-1450-46e5-8606-3bce9f0b78b8",
    "metadata": {},
    "source": [
-    "<b>模型调用</b>"
+    "### 2.2 模型调用"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "323144b3-74e5-4542-bf97-2593af413524",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/Data/PythonVenv/llama1/lib/python3.11/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好? 你好\n"
+      "<human>:Hello\n",
+      "<bot>:Hello\n",
+      "<human>:Goodbye\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "<human>:Hello\n",
+      "<bot>:Goodbye\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "prompt = \"你好?\"\n",
-    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "prompt=\"Hello\"\n",
+    "inputs = '<human>:' + prompt.strip() + '\\n<bot>:'\n",
+    "inputs = tokenizer(inputs, return_tensors=\"pt\")\n",
     "\n",
     "# Generate\n",
     "generate_ids = model.generate(inputs.input_ids.cuda(), max_length=100, pad_token_id=tokenizer.eos_token_id, temperature=0.7,top_p=0.1,top_k=40,do_sample=True,num_beams=1)\n",
